Documents/workspaces/pubsub_ws/log/build_2023-04-20_00-11-39/py_pubsub/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/chittiv1113/Documents/workspaces/pubsub_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/publisher_member_function.py", line 20
    Int32 msgint
          ^^^^^^
SyntaxError: invalid syntax

